Specificity & Style Order

--- a/CSS/classInherit/style.css
+++ b/CSS/classInherit/style.css
@@ -1,3 +1,4 @@
+/* Cambiar la fuente default de HTML que es 16px */
 html {
     font-size: 75%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
