--- a/CSS/classCombinators/style.css
+++ b/CSS/classCombinators/style.css
@@ -6,15 +6,22 @@
 }
 
 /* Combinador Adjacent Sibling: Aplica el color rojo a las etiquetas <p> que estén después de un <h2> */
-h2 + p {
+/* h2 + p {
     color: red;
-}
+} */
 
 /* Combinador General Sibling: Aplica el color violeta siempre que las <p> estén a la misma altura que los <h3> */
 /* alt + 126 = ~ */
-h3 ~ p {
+/* h3 ~ p {
 color: blueviolet;
-}
+} */
 
-/* Combinador Child:  */
-/* Combinador Descendant: */
+/* Combinador Child:La <p> será hija directa de un <div>  */
+/* div > p {
+    color: red;
+} */
+
+/* Combinador Descendant: Todas las etiquetas <p> que estén dentro de un contenedor <div> */
+div p {
+    color:blue
+};
