Structure and main styles with CSS

--- a/CSS/layoutChallenge/style.css
+++ b/CSS/layoutChallenge/style.css
@@ -2,8 +2,60 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: black;
   color: white;
+  list-style: none;
 }
-
-
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 20px;
+  background-color: black;
+}
+.logo {
+  max-width: 150px;
+  max-height: 150px;
+}
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  padding-top: 50px;
+  padding-right: 20px;
+  gap: 8px;
+}
+body {
+  background-color: rgb(135, 7, 7);
+  margin-top: 20px;
+}
+.main-aside_container {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 50px;
+  padding-top: 20px;
+}
+.main-text {
+  width: 75%;
+  padding-left: 10px;
+}
+aside {
+  width: 50%;
+}
+article {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-left: 20px;
+}
+img {
+  max-width: 50%;
+  padding: 10px;
+}
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+.rrss-list {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
